# mpm

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
.github/site/: auto.ts  main.ts  package-lock.json  package.json  tsconfig.json
.github/site/cmd/: generate-index.ts  generate-site.ts
.github/site/platform/: civitai.ts  paths.ts  sort.ts
.github/workflows/: binary.yml  release.yml
models/checkpoints/: cyber-realistic-pony-catalyst@4.0.0.yml  cyber-realistic-pony@14.0.0.yml  hassaku@1.3.0-a.yml  hassaku@3.1.0.yml  illustrij@18.0.0.yml  pony-amateur@2.0.0.yml  pony-peoples-works@6.0.0.yml  pony@6.0.0.yml  wai-illustrious@15.0.0.yml
models/loras/: 748cm-style@1.0.0.yml  96yottea-style@2.0.0.yml  ahegao@3.0.0.yml  all-disney-princess@2.0.0.yml  aosiai123-or-shiiros-styles@1.0.0.yml  disney-animation-illustrious@1.0.0.yml  disney-animation-pony@1.0.0.yml  elle-rick-and-morty@1.0.0.yml  expressiveh@1.0.0.yml  genesis@1.0.0.yml  incase-gothic-style@1.0.0.yml  incase-style-pony@3.1.0.yml  insta-baddie@1.0.0.yml  morii-mee-gothic-niji-style@1.0.0.yml  p0nyd1sney1ncasev1x0n@2.0.0.yml  s1-dramatic-lighting@2.0.0.yml  sam-does-art-style@1.0.0.yml  tsuru-anime-style-plus-people-works@1.0.0.yml  usnr-style@1.0.0.yml  vixons-gothic-neon-styles@2.0.0.yml
src/: main.rs
src/cmd/: add.rs  add_civit.rs  add_direct.rs  add_known.rs  fetch.rs  install.rs  mod.rs  remove.rs
src/platform/: civitai.rs  download.rs  format_name.rs  index.rs  mod.rs  models_yaml.rs  os_string_ext.rs  path_ext.rs
